feat: implement header/burger/styles and successfully set webpack build-dev up

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,12 @@
 @use "styles/normalize" as *;
 @use "styles/fonts" as *;
-@use "styles/mixins" as *;
-@use "styles/media" as *;
+@use "styles/helpers/mixins" as *;
+@use "styles/helpers/media" as *;
 @use "styles/variables" as *;
 @use "styles/utils" as *;
 @use "styles/globals" as *;
+@use "styles/blocks/button" as *;
+@use "styles/blocks/burger-button" as *;
 @use "styles/blocks/header" as *;
+@use "styles/blocks/cross-button" as *;
+@use "styles/blocks/mobile-overlay" as *;
