feat: append hero section: layout/styles/adaptive and fix burger button

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,3 +10,5 @@
 @use "styles/blocks/header" as *;
 @use "styles/blocks/cross-button" as *;
 @use "styles/blocks/mobile-overlay" as *;
+@use "styles/blocks/section" as *;
+@use "styles/blocks/hero" as *;
