feat: append services section: layout/styles/adaptive

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,9 +6,14 @@
 @use "styles/utils" as *;
 @use "styles/globals" as *;
 @use "styles/blocks/button" as *;
+@use "styles/blocks/grid" as *;
 @use "styles/blocks/burger-button" as *;
 @use "styles/blocks/header" as *;
 @use "styles/blocks/cross-button" as *;
 @use "styles/blocks/mobile-overlay" as *;
 @use "styles/blocks/section" as *;
 @use "styles/blocks/hero" as *;
+@use "styles/blocks/puddle-bg" as *;
+@use "styles/blocks/services" as *;
+@use "styles/blocks/service-card" as *;
+@use "styles/blocks/banner" as *;
