feat: add styles for studies section

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,3 +17,4 @@
 @use "styles/blocks/services" as *;
 @use "styles/blocks/service-card" as *;
 @use "styles/blocks/banner" as *;
+@use "styles/blocks/studies" as *;
