--- a/src/index.scss
+++ b/src/index.scss
@@ -18,3 +18,4 @@
 @use "styles/blocks/service-card" as *;
 @use "styles/blocks/banner" as *;
 @use "styles/blocks/studies" as *;
+@use "styles/blocks/process" as *;
