feat: add team section styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,5 @@
 @use "styles/blocks/banner" as *;
 @use "styles/blocks/studies" as *;
 @use "styles/blocks/process" as *;
+@use "styles/blocks/team" as *;
+@use "styles/blocks/team-card" as *;
