--- a/src/styles/blocks/_grid.scss
+++ b/src/styles/blocks/_grid.scss
@@ -22,4 +22,13 @@
       --gridColumns: 1;
     }
   }
+
+  &--3 {
+    @include desktop {
+      --gridColumns: 3;
+    }
+    @include mobile {
+      --gridColumns: 1;
+    }
+  }
 }
