feat: implement testimonials section

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,3 +21,6 @@
 @use "styles/blocks/process" as *;
 @use "styles/blocks/team" as *;
 @use "styles/blocks/team-card" as *;
+@use "styles/blocks/pagination" as *;
+@use "styles/blocks/reviews" as *;
+@use "styles/blocks/review-card" as *;
