feat: implement contact-us section:layout and styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,9 @@
 @use "styles/variables" as *;
 @use "styles/utils" as *;
 @use "styles/globals" as *;
+@use "styles/blocks/field" as *;
+@use "styles/blocks/radios" as *;
+@use "styles/blocks/radio" as *;
 @use "styles/blocks/button" as *;
 @use "styles/blocks/grid" as *;
 @use "styles/blocks/burger-button" as *;
@@ -24,3 +27,4 @@
 @use "styles/blocks/pagination" as *;
 @use "styles/blocks/reviews" as *;
 @use "styles/blocks/review-card" as *;
+@use "styles/blocks/contact-us" as *;
