feat:implement footer section: layout with styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,3 +28,6 @@
 @use "styles/blocks/reviews" as *;
 @use "styles/blocks/review-card" as *;
 @use "styles/blocks/contact-us" as *;
+@use "styles/blocks/soc1als" as *;
+@use "styles/blocks/subscribe-form" as *;
+@use "styles/blocks/footer" as *;
